--- a/source/js/module/gallery/gallery.html
+++ b/source/js/module/gallery/gallery.html
@@ -1,10 +1,10 @@
-
+<!--
   @module:   gallery
   @scss:     ./source/css/module/gallery.scss
   @js:       ./source/js/module/gallery/gallery.js
 -->
 
-<div class="gallery">
+<div class="gallery" id="gallery">
   	<div class="intro--container">
 		<h2>Gallery</h2>
 		<p class="intro--container__content">
@@ -29,23 +29,7 @@
 </div>
 
 
-<!-- <div class="mosaic--container">
-		<div class="mosaic--container__top">
-			<li class="mosaic--element mosaic--top__left mobileView"><img src="img/mosaic-img1.jpg" alt=""></li>
-			<div class="mosaic--block">
-				<li class="mosaic--element mosaic--top__topMiddle mobileView"><img src="img/mosaic-img2.jpg" alt=""></li>
-				<li class="mosaic--element mosaic--top__topRight mobileView"><img src="img/mosaic-img3.jpg" alt=""></li>
-				<li class="mosaic--element mosaic--top__bottomRight mobileView"><img src="img/mosaic-img4.jpg" alt=""></li>
-			</div>
-		</div>
-		<div class="mosaic--container__middle">
-			<li class="mosaic--element mosaic--middle__left mobileView"><img src="img/mosaic-img5.jpg" alt=""></li>
-			<li class="mosaic--element mosaic--middle__middle mobileView"><img src="img/mosaic-img6.jpg" alt=""></li>
-			<li class="mosaic--element mosaic--middle__right mobileView"><img src="img/mosaic-img7.jpg" alt=""></li>
-		</div>
-		<div class="mosaic--container__bottom">
-			<li class="mosaic--element mosaic--bottom__left mobileView"><img src="img/mosaic-img8.jpg" alt=""></li>
-			<li class="mosaic--element mosaic--bottom__right mobileView"><img src="img/mosaic-img9.jpg" alt=""></li>
 
-		</div>
-	</div> 
+
+
+
