--- a/source/js/module/home/home.html
+++ b/source/js/module/home/home.html
@@ -4,7 +4,7 @@
   @js:       ./source/js/module/home/home.js
 -->
 
-<div class="home">
+<div class="home" id="home">
 	<div class="intro--container">
 		<h2>Welcome</h2>
 		<p class="intro--container__content">
