--- a/source/js/module/info/info.html
+++ b/source/js/module/info/info.html
@@ -4,7 +4,7 @@
   @js:       ./source/js/module/info/info.js
 -->
 
-<div class="info">
+<div class="info" id="info">
   	<div class="intro--container">
 		<h2>About</h2>
 		<p class="intro--container__content">
