--- a/source/js/module/localArea/localArea.html
+++ b/source/js/module/localArea/localArea.html
@@ -4,7 +4,7 @@
   @js:       ./source/js/module/localArea/localArea.js
 -->
 
-<div class="localArea">
+<div class="localArea" id="localArea">
   	<div class="intro--container">
 		<h2>Local Area</h2>
 		<p class="intro--container__content">
