--- a/source/js/module/localArea/localArea.html
+++ b/source/js/module/localArea/localArea.html
@@ -14,6 +14,7 @@
 	</div>
 
 	<div class="map--panel">
+		<div id="map"></div>
 		<div class="map--panel__info"></div>
 	</div>
 
@@ -314,5 +315,6 @@
 		</div>
 		{{/}}
 	</div>
-
 </div>
+
+
