--- a/source/js/module/nav/nav.html
+++ b/source/js/module/nav/nav.html
@@ -11,11 +11,11 @@
 			<div class="burger--bar"></div>
 		</div>
 		<div class="navbar--container" id="nav-tab">
-			<li class="active" on-click="goToHome"><a href="#home">HOME</a></li>
-			<li on-click="goToGallery"><a href="#gallery">GALLERY</a></li>
-			<li on-click="goToInfo"><a href="#info">INFO</a></li>
-			<li on-click="goToLocalArea"><a href="#localArea">LOCAL AREA</a></li>
-			<li on-click="goToContact"><a href="#contact">CONTACT</a></li>
+			<li class="active" on-click="goToHome">HOME</li>
+			<li on-click="goToGallery">GALLERY</li>
+			<li on-click="goToInfo">INFO</li>
+			<li on-click="goToLocalArea">LOCAL AREA</li>
+			<li on-click="goToContact">CONTACT</li>
 		</div>
 	</div>
 
