--- a/source/js/module/nav/nav.html
+++ b/source/js/module/nav/nav.html
@@ -10,12 +10,12 @@
 			<div class="burger--bar"></div>
 			<div class="burger--bar"></div>
 		</div>
-		<div class="navbar--container" id="nav-tab">
-			<li class="active navButton nav-underline" on-click="goToHome" id="#home">HOME</li>
-			<li class="navButton nav-underline" on-click="goToGallery" id="#gallery">GALLERY</li>
-			<li class="navButton nav-underline" on-click="goToInfo" id="#info">INFO</li>
-			<li class="navButton nav-underline" on-click="goToLocalArea" id="#localArea">LOCAL AREA</li>
-			<li class="navButton nav-underline" on-click="goToContact" id="#contact">CONTACT</li>
+		<div class="navbar--container {{expanded ? 'activeBurger': ' '}}" id="nav-tab">
+			<li class="navButton nav-underline {{#if view == 'home'}} active{{/if}}" on-click="goToHome" id="#home">HOME</li>
+			<li class="navButton nav-underline {{#if view == 'gallery'}} active{{/if}}" on-click="goToGallery" id="#gallery">GALLERY</li>
+			<li class="navButton nav-underline {{#if view == 'info'}} active{{/if}}" on-click="goToInfo" id="#info">INFO</li>
+			<li class="navButton nav-underline {{#if view == 'localArea'}} active{{/if}}" on-click="goToLocalArea" id="#localArea">LOCAL AREA</li>
+			<li class="navButton nav-underline {{#if view == 'contact'}} active{{/if}}" on-click="goToContact" id="#contact">CONTACT</li>
 		</div>
 	</div>
 
