Started to work on gallery

--- a/source/js/module/gallery/gallery.html
+++ b/source/js/module/gallery/gallery.html
@@ -2,7 +2,9 @@
   @module:   gallery
   @scss:     ./source/css/module/gallery.scss
   @js:       ./source/js/module/gallery/gallery.js
--->
+ -->
+
+
 
 <div class="gallery" id="gallery">
   	<div class="intro--container">
@@ -20,7 +22,7 @@
 				<img src="../img/mosaic-img1.jpg" alt="">
 			</div>
 		</li>
-		<!-- <li class="images" on-click="image">
+		<li class="images" on-click="image">
 			<div class="mosiac--element">
 				<img src="../img/mosaic-img1.jpg" alt="">
 			</div>
@@ -29,12 +31,17 @@
 			<div class="mosiac--element">
 				<img src="../img/mosaic-img1.jpg" alt="">
 			</div>
-		</li> -->
+		</li>
 	</div>
 
 
 
-	<div class="carouselBox active">
+
+
+
+
+</div>
+	<!-- <div class="carouselBox active">
 		<div class="buttons">
 			<button class="prev">
 				◀<span class="offscreen">Previous</span>
@@ -61,7 +68,7 @@
 				</div>
 			</li>
 		</div>
-	</div>
+	</div> -->
 
 	<!-- <div class="carouselBox active">
 		<div class="buttons">
@@ -73,16 +80,11 @@
 			</button>
 		</div> -->
 
-
-
-
-</div>
-
 		<!-- <ol class="content">
 			<li>1</li>
 			<li class="current">2</li>
 			<li>3</li>
 			<li>4</li>
 		</ol>
-	</div>
- -->
+	</div> -->
+ 
