Still playing around with Gallery area

--- a/source/js/module/contact/contact.html
+++ b/source/js/module/contact/contact.html
@@ -18,10 +18,10 @@
 			<div class="contactPanel--container__right">
 				<h3>General Enquiry</h3>
 				<form action="MAILTO:dominichacking@gmail.com" method="post" enctype="text/plain">
-					<input type="text" value="Name">
-					<input type="text" value="E-mail address">
-					<textarea type="text" class="message" value="Your Message"></textarea>
-					<input type="submit" class="submit" value="Send Message">
+					<input type="text" placeholder="Name" >
+					<input type="text" placeholder="E-mail address">
+					<textarea type="text" class="message" placeholder="Your Message"></textarea>
+					<input type="submit" class="submit" placeholder="Send Message">
 				</form>
 			</div>
 			<div class="contactPanel--container__left">
