--- a/source/js/module/localArea/localArea.html
+++ b/source/js/module/localArea/localArea.html
@@ -13,6 +13,18 @@
 		<p><br><br>The Eygalières local history museum is also worth a visit. It can be found in the Chapelle des Pénitents and presents some prehistoric relics as well as an interesting collection of agricultural tools. From the museum there are magnificent views towards the Caume mountain, the Alpilles and the River Durance. Similar views can also be enjoyed from the Calade path which leads past the chapel.</p>
 	</div>
 
+	<div class="imagePanel">
+		<div class="imageContainer">
+			<div class="leftImage"></div>
+			<div class="rightImage"></div>
+		</div>
+	</div>
+
+	<div class="intro--container mapHeading">
+		<h2>Map</h2>
+		<p class="intro--container__content"></p>
+	</div>
+
 	<div class="map--panel">
 		<div id="map"></div>
 		<div class="map--panel__info"></div>
