addded new floor plan images

--- a/source/js/module/info/info.html
+++ b/source/js/module/info/info.html
@@ -35,8 +35,8 @@
 	<div class="whiteStripe"></div>
 
 	<div class="floorPlanPanel">
-		<img src="../img/groundFloor.jpg" alt="">
-		<img src="../img/firstFloor.jpg" alt="">
+		<img src="../img/img--groundFloor.png" alt="">
+		<img src="../img/img--firstFloor.png" alt="">
 	</div>
 
 	<div class="whiteStripe"></div>
