added local area images

--- a/source/js/module/contact/contact.html
+++ b/source/js/module/contact/contact.html
@@ -21,7 +21,7 @@
 					<input type="text" placeholder="Name" >
 					<input type="text" placeholder="E-mail address">
 					<textarea type="text" class="message" placeholder="Your Message"></textarea>
-					<input type="submit" class="submit" placeholder="Send Message">
+					<input type="submit" class="submit" value="Send Message" >
 				</form>
 			</div>
 			<div class="contactPanel--container__left">
