--- a/source/js/module/localArea/localArea.html
+++ b/source/js/module/localArea/localArea.html
@@ -49,19 +49,22 @@
 		{{#area == "aix"}}
 	        <div class="tab-pane" id="aix">
 	        	<div class="content--main">
-	        		<div class="content--main__writing">
+	        		<div class="content--main__writingTop">
 						<h3>AIX EN PROVENCE</h3>
 
 						<p>Protected by the Montagne St Victoire, Aix is surrounded by a countryside full of authentic Provencal houses and traditional French style gardens. Aix was the capital of Provence in the 15th century. Wealthy merchants and local dignitaries helped turn this city into the Florence of Provence as we know it today.</p>
 
 						<p>n Aix, one can find all the beauty of 17th and 18th century Provence - handsome houses, private mansions, city squares bursting with flowers, ancient fountains and narrow shaded streets. Aix was inspiration to many of the world's greatest writers and painters : Guigou, Stendhal, Mistral, Zola, and Cézanne. There is even a special Cézanne tour which one can follow through the streets of Aix.</p>
+					</div>
 
+					<div class="content--main__img aix"></div>
+
+					<div class="content--main__writingTop">
 						<p>As a city of art and culture, Aix possesses a wealth of superb architecture that has been carefully preserved and restored. Walking through the Cours Mirabeau and the Rue Gaston de Saporta one can admire the private mansions with their sculptured doors and windows and the intricate iron work on the balconies.</p>
 
 						<p>Each summer the International Festival of Lyric Arts and Music takes place, uniting acclaimed prima donnas and maestros in a fabulous selection of singing and music. The Dance Festival is also world reputed.</p>
 					</div>
 
-					<div class="content--main__img"></div>
 				</div>
 
 				<div class="whiteStripe"></div>
@@ -106,7 +109,7 @@
 				<p>The annual theater festival is one of Avignon's main attractions. Started in 1947 by Jean Vilar, it runs between the 10th of July and the 5th of August - nearly 120,000 spectators come to discover new talent or admire those actors already known, creating a unique atmosphere found only in Avignon in the summer.</p>
 				</div>
 
-				<div class="content--main__img"></div>
+				<div class="content--main__img avignon"></div>
 
 			</div>
 
@@ -155,7 +158,7 @@
 				<p>The Roman monuments of Arles are registered with Unesco and are a definite must to be seen. The houses and private mansions of the 16th and 17th centuries, the cloister of St. Trophime, the Hôtel de Ville, and the shaded terraces of the Place des Lices are also well worth a tour.</p>
 				</div>
 
-				<div class="content--main__img"></div>
+				<div class="content--main__img arles"></div>
 
 			</div>
 
@@ -200,7 +203,7 @@
 					<p>At the entrance of Les Baux, you can visit the History Museum which will explain village life and history through the centuries. Outside of the village, do not miss the permanent exhibition of the Cathédrale d'Image, an audio-visual extravaganza projected onto a 4.000m2 rock-face disguised as a giant movie screen. Very impressive!</p>
 				</div>
 
-				<div class="content--main__img"></div>
+				<div class="content--main__img lesBaux"></div>
 			</div>
 
 			<div class="whiteStripe"></div>
@@ -250,7 +253,7 @@
 
 				</div>
 
-				<div class="content--main__img"></div>
+				<div class="content--main__img marsielle"></div>
 			</div>
 
 			<div class="whiteStripe"></div>
@@ -294,7 +297,7 @@
 					<p>If you love history, art or charming boutiques, you will feel quite at home in Saint-Rémy. The beautiful residences on the outskirts of the village and the shady cafes of "la place Jean-Jaurès" not only attract tourists but celebrities as well. Far from the crowds of the Cote d'Azur, artists and movie stars are known to seek refuge here, where they can appreciate the unhurried pace of life.</p>
 				</div>
 
-				<div class="content--main__img"></div>
+				<div class="content--main__img StRem"></div>
 			</div>
 
 			<div class="whiteStripe"></div>
