Attempting add carousel

--- a/source/js/module/localArea/localArea.html
+++ b/source/js/module/localArea/localArea.html
@@ -49,23 +49,20 @@
 		{{#area == "aix"}}
 	        <div class="tab-pane" id="aix">
 	        	<div class="content--main">
-	        		<div class="content--main__writingTop">
+	        		<div class="content--main__writing">
 						<h3>AIX EN PROVENCE</h3>
 
 						<p>Protected by the Montagne St Victoire, Aix is surrounded by a countryside full of authentic Provencal houses and traditional French style gardens. Aix was the capital of Provence in the 15th century. Wealthy merchants and local dignitaries helped turn this city into the Florence of Provence as we know it today.</p>
-					</div>
 
-					<div class="content--main__img aix"></div>
-
-					<div class="content--main__writingBottom">
 						<p>n Aix, one can find all the beauty of 17th and 18th century Provence - handsome houses, private mansions, city squares bursting with flowers, ancient fountains and narrow shaded streets. Aix was inspiration to many of the world's greatest writers and painters : Guigou, Stendhal, Mistral, Zola, and Cézanne. There is even a special Cézanne tour which one can follow through the streets of Aix.</p>
 
 
 						<p>As a city of art and culture, Aix possesses a wealth of superb architecture that has been carefully preserved and restored. Walking through the Cours Mirabeau and the Rue Gaston de Saporta one can admire the private mansions with their sculptured doors and windows and the intricate iron work on the balconies.</p>
 
-						<p>Each summer the International Festival of Lyric Arts and Music takes place, uniting acclaimed prima donnas and maestros in a fabulous selection of singing and music. The Dance Festival is also world reputed.</p>
+						<p class="no-padding">Each summer the International Festival of Lyric Arts and Music takes place, uniting acclaimed prima donnas and maestros in a fabulous selection of singing and music. The Dance Festival is also world reputed.</p>
 					</div>
 
+					<div class="content--main__img aix"></div>
 				</div>
 
 				<div class="whiteStripe"></div>
@@ -98,22 +95,19 @@
 				</div>
 			</div>
 		{{/}}
-		
+
 		{{#area == "avignon"}}
 		<div class="tab-pane" id="avignon">
 			<div class="content--main">
-        		<div class="content--main__writingTop">
-				<h3>AVIGNON</h3>
+        		<div class="content--main__writing">
+					<h3>AVIGNON</h3>
 
-				<p>Avignon stands high above the immense plains of the Rhône River and is the strategic point of the whole valley. Its architecture is marked by papal history - going through any of the seven doors of the superbly preserved walls one discovers the city of the Popes. The Palace of the Popes built in the 14th century overlooks a lively square. Nearby are the museums the Petit Palais and Palais du Roure and not too far away stands the famous Pont d'Avignon.</p>
+					<p>Avignon stands high above the immense plains of the Rhône River and is the strategic point of the whole valley. Its architecture is marked by papal history - going through any of the seven doors of the superbly preserved walls one discovers the city of the Popes. The Palace of the Popes built in the 14th century overlooks a lively square. Nearby are the museums the Petit Palais and Palais du Roure and not too far away stands the famous Pont d'Avignon.</p>
+
+					<p class="no-padding">The annual theater festival is one of Avignon's main attractions. Started in 1947 by Jean Vilar, it runs between the 10th of July and the 5th of August - nearly 120,000 spectators come to discover new talent or admire those actors already known, creating a unique atmosphere found only in Avignon in the summer.</p>
 				</div>
 
-				<div class="content--main__img avignon"></div>
-
-				<div class="content--main__writingBottom">
-				<p>The annual theater festival is one of Avignon's main attractions. Started in 1947 by Jean Vilar, it runs between the 10th of July and the 5th of August - nearly 120,000 spectators come to discover new talent or admire those actors already known, creating a unique atmosphere found only in Avignon in the summer.</p>
-				</div>
-
+				<div class="content--main__img avignon"><img src="../img/img--village__avignon--cropped.jpg" alt=""></div>
 
 			</div>
 
@@ -150,22 +144,19 @@
 		{{#area == "arles"}}
 		<div class="tab-pane" id="arles">
 			<div class="content--main">
-				<div class="content--main__writingTop">
-				<h3>ARLES</h3>
+				<div class="content--main__writing">
+					<h3>ARLES</h3>
 
-				<p>Arles is the largest city in France. It is encircled by exceptional beauty - the banks of the Rhône river, the arid plains of Crau, the Alpilles and the untamed land of Camargue. Once a metropolis of Roman Gaul, Arles became a symbol of ardent Christianity as can be seen in the arena, the Alyscamps burial grounds, the amphitheater and the Roman baths of Constantin.</p>
+					<p>Arles is the largest city in France. It is encircled by exceptional beauty - the banks of the Rhône river, the arid plains of Crau, the Alpilles and the untamed land of Camargue. Once a metropolis of Roman Gaul, Arles became a symbol of ardent Christianity as can be seen in the arena, the Alyscamps burial grounds, the amphitheater and the Roman baths of Constantin.</p>
+
+					<p>Arles is now the gateway to Camargue, land of the Gypsies and meeting place of the Camargue cowboys. The ferias or bull runs and bull fights of today are held in the very same arena that was the scene of the Roman games in the first century!</p>
+
+					<p>A city of festivals, art, and culture, Arles has never stopped attracting artists. Van Gogh stayed here with his friend Gauguin. Picasso, a lover of bull fights, was inspired by them to do two paintings and 57 drawings. Arles is also a centre of photography. Each summer the Rencontres Internationales de la Photographie brings many visitors.</p>
+
+					<p class="no-padding">The Roman monuments of Arles are registered with Unesco and are a definite must to be seen. The houses and private mansions of the 16th and 17th centuries, the cloister of St. Trophime, the Hôtel de Ville, and the shaded terraces of the Place des Lices are also well worth a tour.</p>
 				</div>
 
-				<div class="content--main__img arles"></div>
-
-				<div class="content--main__writingBottom">
-				<p>Arles is now the gateway to Camargue, land of the Gypsies and meeting place of the Camargue cowboys. The ferias or bull runs and bull fights of today are held in the very same arena that was the scene of the Roman games in the first century!</p>
-
-				<p>A city of festivals, art, and culture, Arles has never stopped attracting artists. Van Gogh stayed here with his friend Gauguin. Picasso, a lover of bull fights, was inspired by them to do two paintings and 57 drawings. Arles is also a centre of photography. Each summer the Rencontres Internationales de la Photographie brings many visitors.</p>
-
-				<p>The Roman monuments of Arles are registered with Unesco and are a definite must to be seen. The houses and private mansions of the 16th and 17th centuries, the cloister of St. Trophime, the Hôtel de Ville, and the shaded terraces of the Place des Lices are also well worth a tour.</p>
-				</div>
-
+				<div class="content--main__img arles"><img src="../img/img--village__arles--cropped.jpg" alt=""></div>
 
 			</div>
 
@@ -196,24 +187,21 @@
 
 		</div>
 		{{/}}
-		
+
 		{{#area == "lesBaux"}}
 		<div class="tab-pane" id="lesBaux">
 			<div class="content--main">
-				<div class="content--main__writingTop">
+				<div class="content--main__writing">
 					<h3>Les Baux</h3>
 
 					<p>The village of the Baux de Provence can only be visited by foot and is situated in the heart of the Alpilles on a rocky plateau 245m high. A brilliant view of Arles, the Camargue and the Alpilles can be seen from the lookout points. This immense and superb stone fortress is without doubt one of the "must-sees" on the Provencal tourist trail.</p>
-				</div>
 
-
-				<div class="content--main__img lesBaux"></div>
-
-				<div class="content--main__writingBottom">
 					<p>The village is one of the most beautiful villages in France. Its cultural heritage is exceptionally rich, with 22 architectural treasures classified as Historic Monuments, including the church, chateau, town-hall, hospital, chapels, houses, doorways... not to mention various items of furniture and a collection of paintings. The village has been painstakingly restored and is now one of the most popular attractions in the region.</p>
 
-					<p>At the entrance of Les Baux, you can visit the History Museum which will explain village life and history through the centuries. Outside of the village, do not miss the permanent exhibition of the Cathédrale d'Image, an audio-visual extravaganza projected onto a 4.000m2 rock-face disguised as a giant movie screen. Very impressive!</p>
+					<p class="no-padding">At the entrance of Les Baux, you can visit the History Museum which will explain village life and history through the centuries. Outside of the village, do not miss the permanent exhibition of the Cathédrale d'Image, an audio-visual extravaganza projected onto a 4.000m2 rock-face disguised as a giant movie screen. Very impressive!</p>
 				</div>
+
+				<div class="content--main__img lesBaux"><img src="../img/img--village__lesBaux--cropped.jpg" alt=""></div>
 
 			</div>
 
@@ -251,21 +239,19 @@
 		{{#area == "marseille"}}
 		<div class="tab-pane" id="marseille">
 			<div class="content--main">
-				<div class="content--main__writingTop">
+				<div class="content--main__writing">
 					<h3>Marseille</h3>
 
 					<p>Although part of the region of Provence, Marseilles has a soul of its own. Founded in 600BC by the Greek sailors of Phocaea, this great city is the oldest in France and surely the most complex. Second largest city in France and the largest commercial port, Marseilles was the gateway to the Mediterranean in the time of the French colonies. Today Marseilles remains a capital of southern Europe, cosmopolitan and exuberant, with its picturesque old port, its Bouillabaisse and its folklore.</p>
-				</div>	
 
-				<div class="content--main__img marsielle"></div>
-
-				<div class="content--main__writingBottom">
 					<p>Difficult to know, Marseilles does not open itself up to visitors spontaneously. The old town ("Panier") and port, the cliff road high above the sea and the wild inlets plunging into the deep blue water for 20 km to Cassis are a definite tourist attraction. But the commercial port, the airport, the oil industry and the large population all play an important part in the ecomomic role of the whole of Provence and complete the picture of a city rich not only economically but in culture, art and science.</p>
 
 					<p>To discover its unique character and beauty, one must leave the centre of town and explore some of the "quartiers" of which there are more than 100. Each quartier is a little Provencal village of its own with a church, a Boules playing area and the obligatory plane trees. One can climb to 162m above sea level to visit the church of the patron saint of sailors, Notre Dame de La Garde.</p>
 
-					<p>From the islands "lles de Frioul" and the Chateau d'If, famous for the legend of the Count of Monte Cristo, one has a beautiful view of the ancient maritime site of Marseilles...</p>
+					<p class="no-padding">From the islands "lles de Frioul" and the Chateau d'If, famous for the legend of the Count of Monte Cristo, one has a beautiful view of the ancient maritime site of Marseilles...</p>
 				</div>
+
+				<div class="content--main__img marsielle"><img src="../img/img--village__marseille--cropped.jpg" alt=""></div>
 
 			</div>
 
@@ -300,19 +286,17 @@
 		{{#area == "StRem"}}
 		<div class="tab-pane" id="StRem">
 			<div class="content--main">
-				<div class="content--main__writingTop">
+				<div class="content--main__writing">
 					<h3>Saint Remy de Provence</h3>
 
 					<p>Situated in the heart of the Alpilles, Saint Rémy is an historic village built on one of the oldest archeological sites in Europe. It is surrounded by lush green perfumed valleys and its ancient streets lined with beautifully restored old houses. While strolling through the narrow winding streets you will discover fantastic old fountains, shady squares, picturesque restaurants and elegant boutiques.</p>
-				</div>
 
-				<div class="content--main__img stRem"></div>
-
-				<div class="content--main__writingBottom">
 					<p>From the place Jean Jaurès to the gates of the old town, you will come across a long succession of "hôtels particuliers" (often converted into museums or art galleries), convents, chapels, and ornate houses from the 17th and 18th century. The beauty of the countryside and the quality of light has inspired many artists, writers and painters. Without a doubt, the most famous was Vincent Van Gogh who produced more than 150 paintings of the countryside surrounding Saint Rémy de Provence.</p>
 
-					<p>If you love history, art or charming boutiques, you will feel quite at home in Saint-Rémy. The beautiful residences on the outskirts of the village and the shady cafes of "la place Jean-Jaurès" not only attract tourists but celebrities as well. Far from the crowds of the Cote d'Azur, artists and movie stars are known to seek refuge here, where they can appreciate the unhurried pace of life.</p>
+					<p class="no-padding">If you love history, art or charming boutiques, you will feel quite at home in Saint-Rémy. The beautiful residences on the outskirts of the village and the shady cafes of "la place Jean-Jaurès" not only attract tourists but celebrities as well. Far from the crowds of the Cote d'Azur, artists and movie stars are known to seek refuge here, where they can appreciate the unhurried pace of life.</p>
 				</div>
+
+				<div class="content--main__img stRem"><img src="../img/img--village__stRemy--cropped.jpg" alt=""></div>
 
 			</div>
 
