--- a/source/js/module/localArea/localArea.html
+++ b/source/js/module/localArea/localArea.html
@@ -25,10 +25,10 @@
 		<p class="intro--container__content"></p>
 	</div>
 
-	<!-- <div class="map--panel">
+	<div class="map--panel">
 		<div id="map"></div>
 		<div class="map--panel__info"></div>
-	</div> -->
+	</div>
 
 	<div class="nearestVillage--panel">
 		<div class="house"></div>
@@ -107,7 +107,7 @@
 					<p class="no-padding">The annual theater festival is one of Avignon's main attractions. Started in 1947 by Jean Vilar, it runs between the 10th of July and the 5th of August - nearly 120,000 spectators come to discover new talent or admire those actors already known, creating a unique atmosphere found only in Avignon in the summer.</p>
 				</div>
 
-				<div class="content--main__img avignon"><img src="../img/img--village__avignon--cropped.jpg" alt=""></div>
+				<div class="content--main__img avignon"></div>
 
 			</div>
 
@@ -156,7 +156,7 @@
 					<p class="no-padding">The Roman monuments of Arles are registered with Unesco and are a definite must to be seen. The houses and private mansions of the 16th and 17th centuries, the cloister of St. Trophime, the Hôtel de Ville, and the shaded terraces of the Place des Lices are also well worth a tour.</p>
 				</div>
 
-				<div class="content--main__img arles"><img src="../img/img--village__arles--cropped.jpg" alt=""></div>
+				<div class="content--main__img arles"></div>
 
 			</div>
 
@@ -201,7 +201,7 @@
 					<p class="no-padding">At the entrance of Les Baux, you can visit the History Museum which will explain village life and history through the centuries. Outside of the village, do not miss the permanent exhibition of the Cathédrale d'Image, an audio-visual extravaganza projected onto a 4.000m2 rock-face disguised as a giant movie screen. Very impressive!</p>
 				</div>
 
-				<div class="content--main__img lesBaux"><img src="../img/img--village__lesBaux--cropped.jpg" alt=""></div>
+				<div class="content--main__img lesBaux"></div>
 
 			</div>
 
@@ -251,7 +251,7 @@
 					<p class="no-padding">From the islands "lles de Frioul" and the Chateau d'If, famous for the legend of the Count of Monte Cristo, one has a beautiful view of the ancient maritime site of Marseilles...</p>
 				</div>
 
-				<div class="content--main__img marsielle"><img src="../img/img--village__marseille--cropped.jpg" alt=""></div>
+				<div class="content--main__img marseille"></div>
 
 			</div>
 
@@ -296,7 +296,7 @@
 					<p class="no-padding">If you love history, art or charming boutiques, you will feel quite at home in Saint-Rémy. The beautiful residences on the outskirts of the village and the shady cafes of "la place Jean-Jaurès" not only attract tourists but celebrities as well. Far from the crowds of the Cote d'Azur, artists and movie stars are known to seek refuge here, where they can appreciate the unhurried pace of life.</p>
 				</div>
 
-				<div class="content--main__img stRem"><img src="../img/img--village__stRemy--cropped.jpg" alt=""></div>
+				<div class="content--main__img stRem"></div>
 
 			</div>
 
