--- a/source/js/module/gallery/gallery.html
+++ b/source/js/module/gallery/gallery.html
@@ -10,36 +10,30 @@
   	<div class="intro--container">
 		<h2>Gallery</h2>
 		<p class="intro--container__content">
-			<!-- Living accommodation is on 2 floors. The ground floor comprises a salon, study, superbly fitted kitchen, laundry room and shower room. The salon, study and kitchen all have French doors opening onto a large terrace and garden with pool and barbecue.
-			Upstairs are 3 double bedrooms, 2 bathrooms (1 en suite) both with separate shower. Bedrooms 1 and 2 both have terraces with panoramic views of the Alpilles. The house has all mod cons - central heating, microwave, circotherm and conventional oven, gas hob, icemaker, washing machine and tumble-dryer. -->
 		</p>
 	</div>
 
 
 
-    <div class="photos ">
-
+    <div class="photos">
         {{#images:i}}
-        <li class="images {{i}}" on-click="image:{{i}}">
-            <div class="mosiacelement">
+        <li class="images image{{i}}" on-click="image:{{i}}">
+            <div class="images__img">
                 <img src="{{name}}"  alt="">
             </div>
         </li>
         {{/}}
-
     </div>
 
     {{#lightBox}}
+        <div class="background">
+            <div class="cross" on-click="close">X</div>
+            <div class="slider__next slider" on-click='goto:{{current + 1}}'></div>
 
-    <div class="background">
-        <div class="cross" on-click="close">X</div>
-        <div class="slider__next slider" on-click='goto:{{current + 1}}'></div>
+            <div class="activeImage"><img src="../img/mosaic-img{{current}}.jpg" alt=""></div>
 
-        <div class="activeImage"><img src="../img/mosaic-img{{current}}.jpg" alt=""></div>
-
-        <div class="slider__prev {{lightBox ? 'slider' : 'displayNone'}}" on-click='goto:{{current - 1}}'></div>
-    </div>
-
+            <div class="slider__prev {{lightBox ? 'slider' : 'displayNone'}}" on-click='goto:{{current - 1}}'></div>
+        </div>
     {{/}}
 
 </div>
